syntax = "proto3";

package user;

option go_package = "/proto"; // Đường dẫn cho generated code trong UserService2

service UserService {
  rpc GetUsersByIDs (GetUsersByIDsRequest) returns (GetUsersByIDsResponse);
  rpc GetUserIDByUsername (GetUserIDByUsernameRequest) returns (GetUserIDByUsernameResponse);
}

message GetUsersByIDsRequest {
  repeated uint64 user_ids = 1;
}

message UserProfile {
  uint64 id = 1;
  string username = 2;
  string full_name = 3;
  string profile_picture_url = 4;
}

message GetUsersByIDsResponse {
  repeated UserProfile users = 1;
}

message GetUserIDByUsernameRequest {
  string username = 1;
}

message GetUserIDByUsernameResponse {
  uint64 user_id = 1;
} 